[project]
name = "redaction"
version = "0.1.4"
description = "Simple redaction script"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Tammy DiPrima", email = "tdiprima@yahoo.com"}]
dependencies = [
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "rich-argparse>=1.7.1",
]

[project.scripts]
redact = "redaction.cli:main"
