[project]
name = "redaction"
version = "0.1.6"
description = "Simple redaction script"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Tammy DiPrima", email = "tdiprima@yahoo.com"}]
license = "MIT"
dependencies = [
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "rich-argparse>=1.7.1",
]
keywords = ["pii", "redaction", "presidio", "privacy", "text"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
redact = "redaction.cli:main"

[tool.setuptools.package-data]
"" = ["LICENSE"]
